--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-helloworld
+<!DOCTYPE html>
+<html lang="en">
+<meta charset="utf-8">
+<html>   
+    <head>
+        <link rel="stylesheet" href="styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i" rel="stylesheet"> 
+        <title>Thomas Lilley</title>
+    </head>
+    <body>
+        <p>Coming Soon</p>
+        <canvas id="canvas" width=1000; height=1000;></canvas>
+        <script src="canvas.js"></script>
+    </body>
+</html>
