added dataset file to test

--- a/index.html
+++ b/index.html
@@ -3,21 +3,23 @@
 <meta charset="utf-8">
 <html>   
     <head>
-        <!-- favicon paths-->
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.json">
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-        <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="theme-color" content="#ffffff">
-
+        <!-- favicon paths-->      
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.json">
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#dc532c">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="theme-color" content="#ffffff">
         <!-- Stylesheets -->
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i" rel="stylesheet"> 
         <title>Thomas Lilley</title>
     </head>
     <body>
+        <div>
+        <p>thomas lilley</p>
+        </div>
         <canvas id="canvas" width=1000; height=1000;></canvas>
         <script src="canvas.js"></script>
     </body>
