added socials and info

--- a/index.html
+++ b/index.html
@@ -18,9 +18,21 @@
     </head>
     <body>
         <div>
-        <p>thomas lilley</p>
+            <P>Hi!  I'm...</P>
         </div>
-        <canvas id="canvas" width=1000; height=1000;></canvas>
-        <script src="canvas.js"></script>
+        <div>
+            <h1>Thomas Lilley</h1>
+        </div>
+        <div>
+            <a href="https://homaslilley.github.io"><img class="socials" src="github-logo.png"></a></img>
+            <a href="https://www.linkedin.com/in/thomas-lilley-b2138bb5/"><img class="socials" src="linedin.png"></img></a>
+        </div>
+        <div class="socials">
+            <a href="/cv.html" class="button">cv</a>
+        </div>
+        <div class="socials">
+            <a href="mailto:me@thomaslilley.co.uk" class="button">contact</a>
+        </div>
+
     </body>
 </html>
