added cv details

--- a/cv.html
+++ b/cv.html
@@ -3,9 +3,87 @@
 <meta charset="utf-8">
 <html>   
     <head>
+         <!-- favicon paths-->      
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.json">
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#dc532c">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="theme-color" content="#ffffff">
+        <!-- Stylesheets -->
+        <link rel="stylesheet" href="cv.css">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i" rel="stylesheet"> 
         <title>Thomas Lilley | CV</title>
     </head>
     <body>
-        <p>cv</p>
+            <a href="index.html"><h1>Thomas Lilley</h1></a>
+        <div>          
+            <h4> me@thomaslilley.co.uk </h4>
+            <p>A recent computer science graduate with a 2:1 honours degree from the University of Lincoln. Currently undertaking a postgraduate degree to further my understanding of programming concepts and machine learning. Graduating in the coming months with an expected Merit. Seeking to secure a Graduate Software Engineer position or similar, to further develop programming knowledge and build relationships with real clients.</p> 
+            <p>My eventual career goal is to assume the role of head programmer, handling complex problem-solving tasks using the latest developments in artificial intelligence and machine learning.</p>
+    
+        </div>
+        <div>
+            <h2>Higher Education</h2>
+            <h3>University of Lincoln | 2018 – Present | Postgraduate</h3>
+            <p>MSc Computer Science - Expected result Merit</p>
+            <p>Research involves using the latest machine learning techniques to improve automatic number-plate recognition systems. Using deep neural networks together with a large dataset of images to create a model capable of reading number-plates in any weather condition.</p>
+            <ul>
+                <li>Advanced knowledge in image processing and computer vision techniques building on the skills already learnt during undergraduate study.</li>
+                <li>Ability to use multiple programming languages and learn quickly. Key languages include Python, C#, C++ and MATLAB.</li>
+                <li>Advanced problem solving.</li>
+                <li>Proficiency in development for cross platform and internet of things devices.</li>
+            </ul>
+            <p>Notable modules – Mobile and Connected Devices (Internet of Things), Advanced Programming, Advanced Artificial Intelligence.</p>
+            <h3>University of Lincoln | 2015 – 2018 | Undergraduate</h3>
+            <p>2:1 BSc. (Honours) Computer Science</p>
+            <p>Research involved using a combination of data collection, machine learning and image processing to identify a select few species of fish in cluttered environments such as coral reefs. The project used a convolutional neural network to train a machine to distinguish between subject and background.</p>
+            <p>Notable modules – Cross Platform Computing, Software Engineering.</p>
+        </div>
+        <div>
+            <h2>Education</h2>
+            <h3>New College Stamford |2013 - 2015 | A-Levels</h3>
+            <p>Computing - C</p>
+            <p>Business Studies - C</p>
+            <p>Graphic Design - C</p>
+            <h3>Stanground Academy | 2007 – 2013 | GCSEs</h3>
+            <p>10 GCSEs, Grade A - C including Maths, Science and English</p>
+        </div>
+        <div>
+            <h2>Work Experience</h2>
+            <h3>Head Cashier | Booker Wholesale | 2018 – Present</h3>
+            <p>Duties Include:</p>
+            <ul>
+                <li>Building business relationships with customers.</li>
+                <li>Serving customers quickly and professionally.</li>
+                <li>Processing high cash transactions and following protocols to ensure a high level of security is maintained throughout the day.</li>
+                <li>Filing important and confidential documents.</li>
+                <li>Managing a small team of colleagues on the checkouts.</li>
+                <li>Providing answers where possible to customers over the phone.</li>
+                <li>Maintaining a clean and tidy shop floor.</li>
+            </ul>
+        </div>
+        <div>
+            <h2>Hobbies and Interests</h2>
+            <ul>
+                <li>Mountaineering – Climbed Mt Snowdon and Helvellyn, currently in the planning stages to climb Ben Nevis.</li>
+                <li>Sports (Walking, Cycling, Archery).</li>
+                <li>Music and Gaming. </li>
+                <li>Various tech Projects including phone repair (software and hardware).</li>
+            </ul>
+        </div>
+        <div>
+            <h2>Additional Information</h2>
+            <ul>
+                <li>Basic knowledge of the Adobe Suite of programs.</li>
+                <li>Duke of Edinburgh Award.</li>
+                <li>Full, Clean Driving Licence.</li>
+            </ul>
+        </div>
+        <div>
+            <h2>References</h2>
+            <p>References are available on request.</p>
+        </div>
     </body>
 </html>
