--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>Thomas Lilley</h1>
         </div>
         <div>
-            <a href="https://thomaslilley.github.io"><img class="socials" src="github-logo.png"></a></img>
+            <a href="https://github.com/thomaslilley"><img class="socials" src="github-logo.png"></a></img>
             <a href="https://www.linkedin.com/in/thomas-lilley-b2138bb5/"><img class="socials" src="linedin.png"></img></a>
         </div>
         <div class="socials">
